Fixed extra grid gap on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -634,7 +634,6 @@ section[data-background='grey'] p {
 	}
 
 	.grid {
-		gap: calc(var(--gap-width) * 2);
 		grid-template-columns: 1fr;
 	}
 	
